--- a/pom.xml
+++ b/pom.xml
@@ -81,4 +81,12 @@
         </plugins>
     </build>
 
+    <distributionManagement>
+        <repository>
+            <id>deploymentRepo</id>
+            <name>Nexus Repository</name>
+            <url>http://192.168.1.26:8081/repository/maven-releases/</url>
+        </repository>
+    </distributionManagement>
+
 </project>
