--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 
 # DB Configuration :
-spring.datasource.url=jdbc:mysql://localhost:3306/db?createDatabaseIfNotExist=true
+#spring.datasource.url=jdbc:mysql://localhost:3306/db?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://mysqldb:3306/db?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MYSQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
 
 # Web Server (Tomcat) configuration :
