--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: mysql:8.0
     restart: unless-stopped
     environment:
-     - MYSQL_ROOT_PASSWORD=
+     - MYSQL_ROOT_PASSWORD= mysqlpass
      - MYSQL_DATABASE= db
     ports:
       - 3306:3306
@@ -22,7 +22,7 @@ services:
       SPRING_APPLICATION_JSON: '{
         "spring.datasource.url" : "jdbc:mysql://mysqldb:3306/db?createDatabaseIfNotExist=true",
         "spring.datasource.username" : "root",
-        "spring.datasource.password" : null,
+        "spring.datasource.password" : "mysqlpass",
         "spring.jpa.hibernate.ddl-auto" : "update"     
       }'
     stdin_open: true
