--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@
 #spring.datasource.url=jdbc:mysql://localhost:3306/db?createDatabaseIfNotExist=true
 spring.datasource.url=jdbc:mysql://mysqldb:3306/db?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=
-spring.jpa.show-sql=false
+spring.datasource.password=mysqlpass
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 # Web Server (Tomcat) configuration :
