--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     image: mysql:8.0
     restart: unless-stopped
     environment:
-     - MYSQL_ROOT_PASSWORD= mysqlpass
-     - MYSQL_DATABASE= db
+     - MYSQL_ROOT_PASSWORD=
+     - MYSQL_DATABASE= foyer_db
     ports:
       - 3306:3306
     volumes:
@@ -20,9 +20,9 @@ services:
       - 8089:8089
     environment:
       SPRING_APPLICATION_JSON: '{
-        "spring.datasource.url" : "jdbc:mysql://mysqldb:3306/db?createDatabaseIfNotExist=true",
+        "spring.datasource.url" : "jdbc:mysql://mysqldb:3306/foyer_db?createDatabaseIfNotExist=true",
         "spring.datasource.username" : "root",
-        "spring.datasource.password" : "mysqlpass",
+        "spring.datasource.password" : null,
         "spring.jpa.properties.hibernate.dialect": "org.hibernate.dialect.MySQL8Dialect",     
         "spring.jpa.hibernate.ddl-auto" : "update"
       }'
