--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 
 # DB Configuration :
 #spring.datasource.url=jdbc:mysql://localhost:3306/db?createDatabaseIfNotExist=true
-spring.datasource.url=jdbc:mysql://mysqldb:3306/db?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://mysqldb:3306/foyer_db?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=mysqlpass
-spring.jpa.show-sql=true
+spring.datasource.password=
+spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 # Web Server (Tomcat) configuration :
 server.port=8089
 server.servlet.context-path=/tpfoyer
