--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: mysql:8.3.0
     restart: unless-stopped
     environment:
-     - MYSQL_ALLOW_EMPTY_PASSWORD= "yes"
+     - MYSQL_ROOT_PASSWORD=
      - MYSQL_DATABASE= foyer_db
     ports:
       - 3306:3306
@@ -22,7 +22,7 @@ services:
       SPRING_APPLICATION_JSON: '{
         "spring.datasource.url" : "jdbc:mysql://mysqldb:3306/foyer_db?createDatabaseIfNotExist=true",
         "spring.datasource.username" : "root",
-        "spring.datasource.password" : "",
+        "spring.datasource.password" : null,
         "spring.jpa.properties.hibernate.dialect": "org.hibernate.dialect.MySQL8Dialect",     
         "spring.jpa.hibernate.ddl-auto" : "update"
       }'
