--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,13 @@
                         <goals>
                             <goal>report</goal>
                         </goals>
+                        <configuration>
+                            <dataFile>${project.build.directory}/jacoco.exec</dataFile>
+                            <outputDirectory>${project.build.directory}/site/jacoco</outputDirectory>
+                            <reports>
+                                <xml>true</xml> 
+                            </reports>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
