--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <description>tp-foyer</description>
     <properties>
         <java.version>17</java.version>
+        <jacoco-maven-plugin>0.8.8</jacoco-maven-plugin>
     </properties>
     <dependencies>
 
@@ -89,23 +90,17 @@
                 <version>0.8.8</version>
                 <executions>
                     <execution>
+                        <id>jacoco-initialize</id>
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
                     </execution>
                     <execution>
-                        <id>report</id>
-                        <phase>verify</phase>
+                        <id>jacoco-site</id>
+                        <phase>package</phase>
                         <goals>
                             <goal>report</goal>
                         </goals>
-                        <configuration>
-                            <dataFile>${project.build.directory}/jacoco.exec</dataFile>
-                            <outputDirectory>${project.build.directory}/site/jacoco</outputDirectory>
-                            <reports>
-                                <xml>true</xml> 
-                            </reports>
-                        </configuration>
                     </execution>
                 </executions>
             </plugin>
