--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,7 @@
     <description>tp-foyer</description>
     <properties>
         <java.version>17</java.version>
-        <!--
         <jacoco-maven-plugin>0.8.8</jacoco-maven-plugin>
-        -->
     </properties>
     <dependencies>
 
@@ -81,7 +79,6 @@
                     </excludes>
                 </configuration>
             </plugin>
-            <!--
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
@@ -95,14 +92,13 @@
                     </execution>
                     <execution>
                         <id>jacoco-site</id>
-                        <phase>package</phase>
+                        <phase>test</phase>
                         <goals>
                             <goal>report</goal>
                         </goals>
                     </execution>
                 </executions>
             </plugin>
-            -->
         </plugins>
     </build>
 
