added gloabal cros origin

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 # Web Server (Tomcat) configuration :
 server.port=8089
 server.servlet.context-path=/tpfoyer
+
+spring.web.cors.allowed-origin-patterns=*
+spring.web.cors.allow-credentials=true
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.web.cors.allowed-headers=*
