added gloabal cros origin

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 server.port=8089
 server.servlet.context-path=/tpfoyer
 
-spring.web.cors.allowed-origin-patterns=*
+spring.web.cors.allowed-origin-patterns=http://192.168.1.24
 spring.web.cors.allow-credentials=true
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
