added sonar properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,6 +2,6 @@ sonar.projectKey=OHP
 sonar.projectName=OHP
 sonar.sources=src/main
 sonar.tests=src/test
-sonar.java.binaries=target/classes
-sonar.java.test.binaries=target/test-classes
+sonar.java.binaries=.
+sonar.java.test.binaries=.
 sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
