--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.projectKey=OHP
 sonar.projectName=OHP
-sonar.sources=src/main
-sonar.tests=src/test
+sonar.sources=.
+sonar.tests=.
 sonar.java.binaries=.
 sonar.java.test.binaries=.
 sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
